{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 26,
  "lineage": "c30f880a-3318-813d-2c4a-97385fcd39a7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029b7ea6ec2836dd2",
            "arn": "arn:aws:ec2:us-east-1:851725417062:elastic-ip/eipalloc-029b7ea6ec2836dd2",
            "domain": "vpc",
            "id": "eipalloc-029b7ea6ec2836dd2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-55-147-70.compute-1.amazonaws.com",
            "public_ip": "100.55.147.70",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-nat-eip-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-nat-eip-public-subnet-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "eipalloc-029b7ea6ec2836dd2",
            "region": "us-east-1"
          }
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dc0d87cecfe03e5",
            "arn": "arn:aws:ec2:us-east-1:851725417062:elastic-ip/eipalloc-01dc0d87cecfe03e5",
            "domain": "vpc",
            "id": "eipalloc-01dc0d87cecfe03e5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-37-126.compute-1.amazonaws.com",
            "public_ip": "3.224.37.126",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-nat-eip-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-nat-eip-public-subnet-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "eipalloc-01dc0d87cecfe03e5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:internet-gateway/igw-07dd28c9dfc813823",
            "id": "igw-07dd28c9dfc813823",
            "owner_id": "851725417062",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "igw-07dd28c9dfc813823",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029b7ea6ec2836dd2",
            "association_id": "eipassoc-0f1665113671e818b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08c0eb6f3d9313bba",
            "network_interface_id": "eni-075aff3d9188228c3",
            "private_ip": "10.0.1.224",
            "public_ip": "100.55.147.70",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055566dee81bf20c4",
            "tags": {
              "Name": "my-vpc-nat-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-nat-public-subnet-1"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "nat-08c0eb6f3d9313bba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dc0d87cecfe03e5",
            "association_id": "eipassoc-0440044818f4078b2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0965928bbdb870ea1",
            "network_interface_id": "eni-0492cc1f4de78dbf9",
            "private_ip": "10.0.2.74",
            "public_ip": "3.224.37.126",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e75b79a36881837c",
            "tags": {
              "Name": "my-vpc-nat-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-nat-public-subnet-2"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "nat-0965928bbdb870ea1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "implicit_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-route-table-az-a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dd28c9dfc813823",
            "id": "r-rtb-07763f0f9c1f274921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07763f0f9c1f27492",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07763f0f9c1f27492"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-route-table-az-b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dd28c9dfc813823",
            "id": "r-rtb-0f60c181d39b4fef91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f60c181d39b4fef9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f60c181d39b4fef9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-route-table-az-a-0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a15b73a2ca68f9d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08c0eb6f3d9313bba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03a15b73a2ca68f9d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03a15b73a2ca68f9d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-route-table-az-b-0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02a5360a1904bec7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0965928bbdb870ea1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02a5360a1904bec7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02a5360a1904bec7a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-route-table-az-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:route-table/rtb-03a15b73a2ca68f9d",
            "id": "rtb-03a15b73a2ca68f9d",
            "owner_id": "851725417062",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-private-route-table-az-a"
            },
            "tags_all": {
              "Name": "my-vpc-private-route-table-az-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtb-03a15b73a2ca68f9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-route-table-az-b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:route-table/rtb-02a5360a1904bec7a",
            "id": "rtb-02a5360a1904bec7a",
            "owner_id": "851725417062",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-private-route-table-az-b"
            },
            "tags_all": {
              "Name": "my-vpc-private-route-table-az-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtb-02a5360a1904bec7a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-route-table-az-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:route-table/rtb-07763f0f9c1f27492",
            "id": "rtb-07763f0f9c1f27492",
            "owner_id": "851725417062",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-public-route-table-az-a"
            },
            "tags_all": {
              "Name": "my-vpc-public-route-table-az-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtb-07763f0f9c1f27492",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-route-table-az-b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:route-table/rtb-0f60c181d39b4fef9",
            "id": "rtb-0f60c181d39b4fef9",
            "owner_id": "851725417062",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-public-route-table-az-b"
            },
            "tags_all": {
              "Name": "my-vpc-public-route-table-az-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtb-0f60c181d39b4fef9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-route-table-az-a-10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d08f2e310479cf0",
            "region": "us-east-1",
            "route_table_id": "rtb-03a15b73a2ca68f9d",
            "subnet_id": "subnet-0a2cfbad88d5c27d9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtbassoc-03d08f2e310479cf0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-route-table-az-b-10.0.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a15d20e3a2221cb",
            "region": "us-east-1",
            "route_table_id": "rtb-02a5360a1904bec7a",
            "subnet_id": "subnet-061f7cedb4eab81d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtbassoc-02a15d20e3a2221cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-route-table-az-a-10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f580c13db6352b1c",
            "region": "us-east-1",
            "route_table_id": "rtb-07763f0f9c1f27492",
            "subnet_id": "subnet-055566dee81bf20c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtbassoc-0f580c13db6352b1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-route-table-az-b-10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f059c345a39de006",
            "region": "us-east-1",
            "route_table_id": "rtb-0f60c181d39b4fef9",
            "subnet_id": "subnet-0e75b79a36881837c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "rtbassoc-0f059c345a39de006",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:security-group/sg-0f86bf16b5d2e5f08",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f86bf16b5d2e5f08",
            "ingress": [],
            "name": "my-vpc-web-sg",
            "name_prefix": "",
            "owner_id": "851725417062",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-web-sg"
            },
            "tags_all": {
              "Name": "my-vpc-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "sg-0f86bf16b5d2e5f08",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-sg-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1196332115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f86bf16b5d2e5f08",
            "security_group_rule_id": "sgr-037760514b732b3fd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-sg-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2187666073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f86bf16b5d2e5f08",
            "security_group_rule_id": "sgr-025d4731bd0495fda",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:subnet/subnet-055566dee81bf20c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055566dee81bf20c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725417062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "subnet-055566dee81bf20c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:subnet/subnet-0e75b79a36881837c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e75b79a36881837c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725417062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "subnet-0e75b79a36881837c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:subnet/subnet-0a2cfbad88d5c27d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2cfbad88d5c27d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725417062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "subnet-0a2cfbad88d5c27d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:subnet/subnet-061f7cedb4eab81d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061f7cedb4eab81d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725417062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0ec61a06c698334ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "subnet-061f7cedb4eab81d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725417062:vpc/vpc-0ec61a06c698334ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef8f00506d50df78",
            "default_route_table_id": "rtb-0779e96b2dd2b6ad6",
            "default_security_group_id": "sg-0127e067f1da99b38",
            "dhcp_options_id": "dopt-0e0820ead52139fae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec61a06c698334ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0779e96b2dd2b6ad6",
            "owner_id": "851725417062",
            "region": "us-east-1",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725417062",
            "id": "vpc-0ec61a06c698334ae",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}